# SmurfSniper

./: .gitignore  1v1.json  2v2.json  CLAUDE.md  README.md  pyproject.toml  search_player.json  smurfsniper.spec
.github/: FUNDING.yml
.github/workflows/: build-windows.yml
models/: sc2.py
packaging/: pyi_entry.py
sc_match_briefer/: analyze.py  enums.py  logger.py  overlay_manager.py  service.py  utils.py
sc_match_briefer/models/: character.py  config.py  player.py  team_history.py
smurf_sniper/: analyze.py  logger.py  service.py  utils.py
smurf_sniper/models/: character.py  player.py
smurfsniper/: _version.py  analyze.py  cli.py  config_paths.py  logger.py  player_log.py  service.py  sounds.py  utils.py
smurfsniper/analyze/: __init__.py  external_intel.py  player_logs.py  players.py  teams.py
smurfsniper/api/: cross_network.py  sc2pulse.py
smurfsniper/models/: character.py  config.py  match.py  player.py  player_log.py  team.py  team_history.py
smurfsniper/ui/: config_editor.py  overlay_manager.py  overlays.py  qt_thread.py
test_data/: 2v2.json
